[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Enemies/slime/slime-Sheet.png" type="Texture" id=1]
[ext_resource path="res://enemies/Slime/Slime.gd" type="Script" id=2]
[ext_resource path="res://general purpose/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://general purpose/hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.00001
height = 14.0

[sub_resource type="Animation" id=1]
resource_name = "die"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20 ]
}

[sub_resource type="Animation" id=2]
resource_name = "hit"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "move"
length = 0.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 2, 2 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 2, 2 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 8.00002
height = 14.0

[node name="Slime" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 3
frame = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
rotation = 1.57079
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/die = SubResource( 1 )
anims/hit = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/move = SubResource( 4 )

[node name="Edge_Detection" type="Node2D" parent="."]

[node name="left" type="Area2D" parent="Edge_Detection"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edge_Detection/left"]
position = Vector2( -16, 13 )
shape = SubResource( 7 )

[node name="right" type="Area2D" parent="Edge_Detection"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edge_Detection/right"]
position = Vector2( 16, 13 )
shape = SubResource( 8 )

[node name="hitbox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="hitbox" index="0"]
position = Vector2( 0, 4 )
rotation = 1.57079
shape = SubResource( 6 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 16384
parent = NodePath("..")

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, 4 )
rotation = 1.57079
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_exited" from="Edge_Detection/left" to="." method="_on_left_body_exited"]
[connection signal="body_exited" from="Edge_Detection/right" to="." method="_on_right_body_exited"]
[connection signal="hit" from="hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="hitbox"]
[editable path="hurtbox"]
